# Django-REST-framework2

./: README.md  pyproject.toml
core/: settings.py  urls.py
user/: models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py
